--- a/[E-13] BERT_final.ipynb
+++ b/[E-13] BERT_final.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e9556a9e",
+   "id": "91d16a8f",
    "metadata": {},
    "source": [
-    "# 인간보다 퀴즈를 잘푸는 인공지능\n",
+    "# [E-13] 인간보다 퀴즈를 잘푸는 인공지능\n",
     "\n",
     "### 목차 \n",
     "\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c71bb21",
+   "id": "63331a58",
    "metadata": {},
    "source": [
     "### 목표 \n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5245a013",
+   "id": "2fb076c7",
    "metadata": {},
    "source": [
     "### (1) 라이브러리 import \n"
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3ba09ff5",
+   "id": "b0b64963",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "419709ec",
+   "id": "10d1e114",
    "metadata": {},
    "source": [
     "### (2) 데이터 불러오기 & 전처리"
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "66a2eeb9",
+   "id": "b2ab86ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "14a5f087",
+   "id": "9d1c5578",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1f3fd86d",
+   "id": "d8200c69",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "415076a5",
+   "id": "83c58bb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2f647470",
+   "id": "b6e31856",
    "metadata": {
     "scrolled": false
    },
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d59760e3",
+   "id": "dc8f14b5",
    "metadata": {},
    "source": [
     "\n",
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "533339e2",
+   "id": "6e3cfc9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8b811945",
+   "id": "b9422f43",
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f0745d8a",
+   "id": "356c1764",
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2311a582",
+   "id": "b153a183",
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c91bb8c2",
+   "id": "90b5b49e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ee164015",
+   "id": "903ea159",
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5f7dca0e",
+   "id": "300c4943",
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cf65f25",
+   "id": "d13ca230",
    "metadata": {},
    "source": [
     "- Tokenize by Vocab\n",
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f5cb3c59",
+   "id": "b1ec44e6",
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "39380aef",
+   "id": "25eaccd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1020bda2",
+   "id": "0146e624",
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37563b51",
+   "id": "3b38dfe0",
    "metadata": {},
    "source": [
     "- Improve Span\n",
@@ -837,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "cab6e447",
+   "id": "32438974",
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "debd0e18",
+   "id": "ce264d28",
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "48d09dde",
+   "id": "70b1d0e8",
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "823c8530",
+   "id": "7dce0181",
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a8618c7c",
+   "id": "df3d0462",
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "52122d47",
+   "id": "2f1d70bb",
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "12095ca1",
+   "id": "d65a50c2",
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "91f38dec",
+   "id": "6011c645",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "6bc4c180",
+   "id": "7e025497",
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4407a672",
+   "id": "78aaa9f5",
    "metadata": {},
    "source": [
     "- Dataset split "
@@ -1102,7 +1102,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "178eb9fb",
+   "id": "eb437dfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "3a7a5dae",
+   "id": "60a452f7",
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1190,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "5221eefc",
+   "id": "88d4dd9d",
    "metadata": {},
    "outputs": [
     {
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "686a4eb5",
+   "id": "5c032d00",
    "metadata": {},
    "source": [
     "- 데이터 분석: Question"
@@ -1237,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "eba69b5f",
+   "id": "4aa6a62f",
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1274,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "ae1c7013",
+   "id": "460d9a85",
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1297,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "5a2d5d94",
+   "id": "47d0eda2",
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1335,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "f8b7fb44",
+   "id": "e77ab360",
    "metadata": {},
    "outputs": [
     {
@@ -1379,7 +1379,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "cf417108",
+   "id": "7b52d224",
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e75f44f",
+   "id": "bf4b86e4",
    "metadata": {},
    "source": [
     "- 데이터 분석 : Context"
@@ -1417,7 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "348c9daf",
+   "id": "c4032a93",
    "metadata": {},
    "outputs": [
     {
@@ -1440,7 +1440,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "d2010de9",
+   "id": "6da20144",
    "metadata": {},
    "outputs": [
     {
@@ -1478,7 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "37e48349",
+   "id": "3ac0c84c",
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1522,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "d657f047",
+   "id": "6a859f3a",
    "metadata": {},
    "outputs": [
     {
@@ -1551,7 +1551,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75aa692b",
+   "id": "71826840",
    "metadata": {},
    "source": [
     "- 데이터 분석 : Answer"
@@ -1560,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "92d817ec",
+   "id": "dd8fe63e",
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1583,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "e150087a",
+   "id": "1b852389",
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1621,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "fb1317f6",
+   "id": "8384e9a3",
    "metadata": {},
    "outputs": [
     {
@@ -1665,7 +1665,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "5e0fbd97",
+   "id": "2e0b2e15",
    "metadata": {},
    "outputs": [
     {
@@ -1694,7 +1694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfb45987",
+   "id": "c6acf3b9",
    "metadata": {},
    "source": [
     "- 데이터 분석 : WordCloud"
@@ -1703,7 +1703,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "74949c93",
+   "id": "2a29342f",
    "metadata": {},
    "outputs": [
     {
@@ -1763,7 +1763,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "80a7df87",
+   "id": "fe61c96d",
    "metadata": {},
    "outputs": [
     {
@@ -1785,7 +1785,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "9ab705c6",
+   "id": "b7b223bf",
    "metadata": {},
    "outputs": [
     {
@@ -1813,7 +1813,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a91276e3",
+   "id": "5c074d57",
    "metadata": {},
    "source": [
     "- 데이터 로드"
@@ -1822,7 +1822,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "60ffb074",
+   "id": "512e50d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1833,7 +1833,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d7f95832",
+   "id": "b543e039",
    "metadata": {},
    "outputs": [
     {
@@ -1867,7 +1867,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "4040b068",
+   "id": "f93ebea7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1912,7 +1912,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "1d149ab3",
+   "id": "571466fa",
    "metadata": {},
    "outputs": [
     {
@@ -2012,7 +2012,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "a9042643",
+   "id": "696bc8dc",
    "metadata": {},
    "outputs": [
     {
@@ -2076,7 +2076,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "d2192ef6",
+   "id": "1e5c2bf9",
    "metadata": {},
    "outputs": [
     {
@@ -2115,7 +2115,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "a9b6a24a",
+   "id": "d8c30303",
    "metadata": {},
    "outputs": [
     {
@@ -2136,7 +2136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "202f8d77",
+   "id": "e966db76",
    "metadata": {},
    "source": [
     "### (3) BERT model"
@@ -2145,7 +2145,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "aec62ba2",
+   "id": "525297db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2303,7 +2303,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "2b65e71a",
+   "id": "6cac8c28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2377,7 +2377,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "09098224",
+   "id": "18ea2a1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2409,7 +2409,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "2ea98610",
+   "id": "2223e911",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2445,7 +2445,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "41d0d180",
+   "id": "06d15cce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2502,7 +2502,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "43022911",
+   "id": "6f391603",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2534,7 +2534,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "77a3952e",
+   "id": "04d1309a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2577,7 +2577,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "8ab6004d",
+   "id": "39603e0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2638,7 +2638,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "545afa74",
+   "id": "2f46e51d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2667,7 +2667,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "be4f2c46",
+   "id": "ad499ef9",
    "metadata": {},
    "outputs": [
     {
@@ -2700,7 +2700,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "d2ddcb39",
+   "id": "091dc989",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2713,7 +2713,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "a07bd678",
+   "id": "bfc3dad3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2722,7 +2722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d53ad40d",
+   "id": "41c9e975",
    "metadata": {},
    "source": [
     "- Training"
@@ -2731,7 +2731,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "2cdf9142",
+   "id": "b123f352",
    "metadata": {},
    "outputs": [
     {
@@ -2964,7 +2964,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "7714a445",
+   "id": "f4d7a3ff",
    "metadata": {},
    "outputs": [
     {
@@ -2985,7 +2985,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "ccb266a2",
+   "id": "db93387b",
    "metadata": {},
    "outputs": [
     {
@@ -3018,7 +3018,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6c21433",
+   "id": "5fbb67e4",
    "metadata": {},
    "source": [
     "- Inference"
@@ -3027,7 +3027,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "373ec243",
+   "id": "ce87659f",
    "metadata": {},
    "outputs": [
     {
@@ -3101,7 +3101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05e45d43",
+   "id": "e1ac3394",
    "metadata": {},
    "source": [
     "### (4) Pretrained Model"
@@ -3110,7 +3110,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "94367ed9",
+   "id": "b634b12f",
    "metadata": {},
    "outputs": [
     {
@@ -3153,7 +3153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cabd566",
+   "id": "e1173daa",
    "metadata": {},
    "source": [
     "- Pretrained model training"
@@ -3162,7 +3162,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "30aa2016",
+   "id": "e721c7fa",
    "metadata": {},
    "outputs": [
     {
@@ -3477,7 +3477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "504429b5",
+   "id": "ad5ae719",
    "metadata": {},
    "source": [
     "- Inference"
@@ -3486,7 +3486,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "e54be20e",
+   "id": "e38eb7b8",
    "metadata": {
     "scrolled": false
    },
@@ -3784,7 +3784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01e1057f",
+   "id": "e694028c",
    "metadata": {},
    "source": [
     "### (5) 시각화 분석"
@@ -3793,7 +3793,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "ccfd3ce5",
+   "id": "d7192cfc",
    "metadata": {},
    "outputs": [
     {
@@ -3815,7 +3815,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "071ecbf6",
+   "id": "0b5700b1",
    "metadata": {},
    "outputs": [
     {
@@ -3865,7 +3865,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "f2bde239",
+   "id": "37181463",
    "metadata": {},
    "outputs": [
     {
@@ -3887,7 +3887,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "df91b961",
+   "id": "ba5bd6f9",
    "metadata": {
     "scrolled": false
    },
@@ -3939,7 +3939,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "aa79142f",
+   "id": "497564c1",
    "metadata": {},
    "outputs": [
     {
@@ -3957,7 +3957,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "a51f0d88",
+   "id": "32021a82",
    "metadata": {},
    "outputs": [
     {
@@ -3974,22 +3974,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02b1f661",
+   "id": "440417e0",
    "metadata": {},
    "source": [
     "# 회고 \n",
     "\n",
-    "- Pretrained model 을 사용하지 않은 BERT 모델은 정답이 단답형이 아닌 정답이 포함된 문장의 형태로 결과값을 반환했고 pretrained model 을 사용한 BERT 의 경우 정답의 내용과 형태가 모두 향상된 결과값을 반환했다. \n",
+    "- Pretrained model 을 사용하지 않은 BERT 모델은 정답을 단답형이 아닌 정답이 포함된 문장의 형태로 반환했고 pretrained model 을 사용한 BERT 의 경우 정답의 내용과 형태가 모두 향상된 결과값을 반환했다. \n",
     "\n",
     "- 실제로 Pretrained model 을 활용했을 때 accuracy 와 loss 가 모두 더 나아진 것을 시각화를 통해 확인 할 수 있다. \n",
     "\n",
-    "- 뛰어난 성능과는 별개로, 모델이 무거워 한번 돌리는데 종종 끊어지기도 하고 너무 오래걸렸다. BERT 보다 좀 더 효율적인 model 을 사용한다는 말이 무슨 말인지 이해할 수 있었다. "
+    "- 뛰어난 성능과는 별개로, 모델이 무거워 한번 돌리는데 너무 오래걸렸고 종종 끊어지기도 하였다. 그러다 보니 한번 돌리는 걸 큰맘 먹고 돌리게 된다. 딥러닝을 공부하려면 익숙해 져야 하는 건지 모르겠지만 BERT 보다 좀 더 효율적인 model 을 사용하게 된다는 말이 무슨 말인지 이해할 수 있었다. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73b906fc",
+   "id": "161abca2",
    "metadata": {},
    "outputs": [],
    "source": []
