Update [E-15] recommendation_iu_final (1).ipynb

--- a/[E-15] recommendation_iu_final (1).ipynb
+++ b/[E-15] recommendation_iu_final (1).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e133103f",
+   "id": "d8a197b8",
    "metadata": {},
    "source": [
     "# [E-15] 아이유팬이 좋아할 만한 다른 아티스트 찾기"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0baf8977",
+   "id": "08338346",
    "metadata": {},
    "source": [
     "### 목차\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eabb3063",
+   "id": "2cb0dafc",
    "metadata": {},
    "source": [
     "### 목표 \n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e1d2516",
+   "id": "24543ea6",
    "metadata": {},
    "source": [
     "### (1) 라이브러리 import"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "21a97cc4",
+   "id": "ff1b874f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ac415cd",
+   "id": "19923d4f",
    "metadata": {},
    "source": [
     "### (2) 데이터 준비 & 전처리"
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a0b4296e",
+   "id": "a0dd28c4",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8590a437",
+   "id": "c9d7e4d6",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8850523d",
+   "id": "0031a9b0",
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2b47e7a5",
+   "id": "4a6b2255",
    "metadata": {
     "scrolled": true
    },
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9679b961",
+   "id": "42ae83a0",
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99c377c5",
+   "id": "2d77b95a",
    "metadata": {},
    "source": [
     "### (3) 분석해 봅시다.\n",
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d2301894",
+   "id": "45d85787",
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bff9125c",
+   "id": "3a7ff096",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9b1823e3",
+   "id": "afbab03e",
    "metadata": {
     "scrolled": true
    },
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c66a665c",
+   "id": "9ca5c3a6",
    "metadata": {
     "scrolled": false
    },
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "87dbd743",
+   "id": "aeb0c083",
    "metadata": {
     "scrolled": true
    },
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f764e433",
+   "id": "5bc20b89",
    "metadata": {
     "scrolled": true
    },
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b710a3e",
+   "id": "0fd47feb",
    "metadata": {},
    "source": [
     "### (4) 내가 선호하는 영화를 5가지 골라서 ratings에 추가해 줍시다."
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f0186ab2",
+   "id": "a08df7b1",
    "metadata": {
     "scrolled": false
    },
@@ -860,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ffb1fceb",
+   "id": "45060d11",
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19cdf7c9",
+   "id": "e8af5fb6",
    "metadata": {},
    "source": [
     "### (5) CSR matrix를 직접 만들어 봅시다."
@@ -959,7 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ca482b5c",
+   "id": "04396271",
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84f30376",
+   "id": "e1757889",
    "metadata": {},
    "source": [
     "### (6) als_model = AlternatingLeastSquares 모델을 직접 구성하여 훈련시켜 봅시다."
@@ -995,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "19963c41",
+   "id": "d8e25e9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3a7f16d2",
+   "id": "1ae29acb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c667edca",
+   "id": "d3f274b1",
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7724dfcc",
+   "id": "99a926b1",
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08543afe",
+   "id": "11fa8968",
    "metadata": {},
    "source": [
     "### (7) 내가 선호하는 5가지 영화 중 하나와 그 외의 영화 하나를 골라 훈련된 모델이 예측한 나의 선호도를 파악해 보세요."
@@ -1077,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "da49a601",
+   "id": "715c9518",
    "metadata": {
     "scrolled": true
    },
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e0c20c0e",
+   "id": "0daca2c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1101,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f1b3a36a",
+   "id": "803b2d3e",
    "metadata": {
     "scrolled": false
    },
@@ -1145,7 +1145,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "701bb3c4",
+   "id": "1b87cbb1",
    "metadata": {
     "scrolled": false
    },
@@ -1194,7 +1194,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "fb16229d",
+   "id": "3f820d27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8a4b8ea1",
+   "id": "25ad1bb7",
    "metadata": {},
    "outputs": [
     {
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "445a4f71",
+   "id": "2e75b3b6",
    "metadata": {},
    "source": [
     "### (8) 내가 좋아하는 영화와 비슷한 영화를 추천받아 봅시다."
@@ -1264,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "45f99990",
+   "id": "53e53edb",
    "metadata": {},
    "outputs": [
     {
@@ -1303,7 +1303,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "10fb0b37",
+   "id": "3fbf0a67",
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "6ab75510",
+   "id": "33333620",
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58945052",
+   "id": "edba8790",
    "metadata": {},
    "source": [
     "### (9) 내가 가장 좋아할 만한 영화들을 추천받아 봅시다."
@@ -1502,7 +1502,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "b4f5613e",
+   "id": "7012a3e6",
    "metadata": {},
    "outputs": [
     {
@@ -1545,7 +1545,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "fad06285",
+   "id": "82e8375e",
    "metadata": {},
    "outputs": [
     {
@@ -1584,7 +1584,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "fde604ac",
+   "id": "ee54856b",
    "metadata": {},
    "outputs": [
     {
@@ -1775,7 +1775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b01c2c3",
+   "id": "9c49d857",
    "metadata": {},
    "source": [
     "# 회고"
@@ -1783,23 +1783,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "679554b4",
+   "id": "139c6392",
    "metadata": {},
    "source": [
-    "  - 기분에 따라 바뀔 수도 있는 '선호도'라는 애매모호한 개념을 수치화 해서 추천을 한다는 게 어려운 일인 듯 하지만 비슷한 장르와 좋아할 만한 영화를 대체적으로 잘 뽑아내 주었다. 적어도 내가 '비선호하는' 장르의 영화는 추천되지 않은 것으로 보아 성능은 괝찮은 것 같다. \n",
+    "  - 기분에 따라 바뀔 수도 있는 '선호도'라는 애매모호한 개념을 수치화 해서 추천을 한다는 게 어려운 일인 듯 하지만 비슷한 장르와 좋아할 만한 영화를 대체적으로 잘 뽑아내 주었다. 적어도 내가 '비선호하는' 장르의 영화는 추천되지 않은 것으로 보아 성능은 괜찮은 것 같다. \n",
     "<br>   \n",
     "\n",
-    "  - 내가 선호하는 영화로 뽑은 5개의 영화가 장르가 좀 다른데, 그래서 그런지 브레이브하트와는 완전 다른 장르의 터미네이터, Sixth Sense 등이 추천되어 favourite 이 어떤 것이냐는것 보다 앞서 입력한 5개의 영화가 결과에 더 큰 영향을 준것으로 보인다. 앞으로 고잉디퍼와 아이펠톤 등을 통해 더 적합한 코드, 모델설계를 구현하게 된다면 성능은 더 좋게 할 수 있을거라 믿는다. \n",
+    "  - 내가 선호하는 영화로 뽑은 5개의 영화가 장르가 여러가지인데, 그래서 그런지 브레이브하트와는 완전 다른 장르의 터미네이터, Sixth Sense 등이 추천되어 favourite 이 어떤 것이냐는것 보다 앞서 입력한 5개의 영화가 결과에 더 큰 영향을 준것으로 보인다. 앞으로 고잉디퍼와 아이펠톤 등을 거치며 더 적합한 코드, 모델설계를 구현하게 된다면 성능은 더 좋게 할 수 있을거라 믿는다. \n",
     "<br>   \n",
     "\n",
-    "  - 금번 과제는 직전 몇개의 과제들보다 무겁지는 않아 많은 에러를 냈음에도 시간에 쫒기지 않고 해결하고 비교적 수월하게 결과를 도출 할 수 있었던 것 같다. 앞으로도 더 다양한 딥려닝 문제들을 시도해 보고 싶다는 생각이 들었다. \n",
+    "  - 금번 과제는 직전 몇개의 과제들보다 무겁지는 않아 많은 에러를 냈음에도 시간에 쫒기지 않고 해결하고 비교적 수월하게 결과를 도출 할 수 있었던 것 같다. 앞으로도 더 다양한 딥러닝 문제들을 시도해 보고 싶다는 생각이 들었다. \n",
     "  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b8a2a41",
+   "id": "c9ece9dd",
    "metadata": {},
    "outputs": [],
    "source": []
